test/invalid/unary_minus_bool.py
# Unary minus on bool
def main() -> None:
    x: bool = True
    y: int = -x  # Cannot negate bool
